--- a/docker/spark-base/Dockerfile
+++ b/docker/spark-base/Dockerfile
@@ -45,7 +45,7 @@ ENV PYSPARK_DRIVER_PYTHON=python3
 
 # Adicao de valores aos paths abaixo para que os componentes os localizem
 ENV PYTHONPATH $SPARK_HOME/python:$SPARK_HOME/python/lib/py4j-0.10.9.7-src.zip:/usr/bin/python3
-ENV PATH $PATH:$JAVA_HOME/bin:$HADOOP_HOME/bin:$SPARK_HOME/bin:$SPARK_HOME/sbin:$SPARK_HOME/python:$SPARK_HOME/python/lib/py4j-0.10.9.7-src.zip:$PYTHONPATH:$HIVE_HOME/bin:$KAFKA_HOME/bin:$SCALA_HOME/bin
+ENV PATH $PATH:$HIVE_HOME/bin:$JAVA_HOME/bin:$HADOOP_HOME/bin:$SPARK_HOME/bin:$SPARK_HOME/sbin:$SPARK_HOME/python:$SPARK_HOME/python/lib/py4j-0.10.9.7-src.zip:$PYTHONPATH:$HIVE_HOME/bin:$KAFKA_HOME/bin:$SCALA_HOME/bin
 
 COPY /config/jupyter/requirements.txt /
 
@@ -53,7 +53,7 @@ COPY /config/jupyter/requirements.txt /
 RUN apt-get update \
     && apt-get install -y wget vim ssh openssh-server curl iputils-ping \
     python3 python3-pip python3-dev \
-    build-essential libssl-dev libffi-dev libpq-dev mariadb-server libmariadb-java \
+    build-essential libssl-dev libffi-dev libpq-dev mariadb-server libmariadb-java libmysql-java mariadb-client \
     && python3 -m pip install -r requirements.txt \
     && python3 -m pip install dask[bag] --upgrade \
     && python3 -m pip install --upgrade toree \
@@ -66,7 +66,7 @@ RUN apt-get update \
     && wget http://archive.apache.org/dist/hadoop/common/hadoop-${HADOOP_VERSION}/hadoop-${HADOOP_VERSION}.tar.gz.asc -O /tmp/hadoop.tar.gz.asc \
     && gpg --verify /tmp/hadoop.tar.gz.asc \
     && tar -xvf /tmp/hadoop.tar.gz -C /usr/ \
-    && rm /tmp/hadoop.tar.gz* \
+    && rm -rf /tmp/* \
     && ln -s ${HADOOP_CONF_DIR} ${HADOOP_CONF_DIR} \
     && rm -rf ${HADOOP_HOME}/share/doc \
     && chown -R root:root ${HADOOP_HOME} \
@@ -77,7 +77,23 @@ RUN apt-get update \
     && gpg --verify /tmp/spark.tar.gz.asc \
     && tar -xvf /tmp/spark.tar.gz -C /tmp/ \
     && mkdir ${SPARK_HOME} \
-    && cp -r /tmp/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_MINOR_VERSION}/* -C /tmp/${SPARK_HOME} \
-    && rm -rf /tmp/spark* \
+    && cp -r /tmp/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_MINOR_VERSION}/* ${SPARK_HOME} \
+    && rm -rf /tmp/* \
     && chmod -R 777 ${SPARK_HOME} \
-    && chown -R root:root ${SPARK_HOME}
+    && chown -R root:root ${SPARK_HOME} \
+    # --------------------------------------------------------------------------
+    # INSTALACAO DO HIVE
+    && wget https://archive.apache.org/dist/hive/hive-${HIVE_VERSION}/apache-hive-${HIVE_VERSION}-bin.tar.gz -O /tmp/hive.tar.gz \
+    && wget https://archive.apache.org/dist/hive/hive-${HIVE_VERSION}/apache-hive-${HIVE_VERSION}-bin.tar.gz.asc -O /tmp/hive.tar.gz.asc \
+    && gpg --verify /tmp/hive.tar.gz.asc \
+    && tar -xvf /tmp/hive.tar.gz -C /tmp/ \
+    && mkdir ${HIVE_HOME} \
+    && cp -r /tmp/apache-hive-${HIVE_VERSION}-bin/* ${HIVE_HOME} \
+    && cp ${HIVE_HOME}/conf/hive-env.sh.template ${HIVE_HOME}/conf/hive-env.sh \
+    && echo "export HADOOP_HOME=${HADOOP_HOME}/" >> ${HIVE_HOME}/conf/hive-env.sh \
+    # configurando o metastore do hive com MariaDB
+    && wget https://repo1.maven.org/maven2/org/mariadb/jdbc/mariadb-java-client/3.3.3/mariadb-java-client-3.3.3.jar -O /usr/share/mariadb-java-client.jar \
+    && ln -s /usr/share/mariadb-java-client.jar ${HADOOP_HOME}/share/hadoop/common/lib/ \
+    && ln -s /usr/share/mariadb-java-client.jar ${HIVE_HOME}/lib/mariadb-java-client.jar \
+    # Criando diretório para jars externos do Hive e baixando suporte a parquet
+    && wget https://repo1.maven.org/maven2/com/twitter/parquet-avro/1.6.0/parquet-avro-1.6.0.jar -P /usr/hive/aux_jars/
